lang/macro/tests/ui/fail/11-unsafe-function.stderr
error: `unsafe` is not supported for functions in contract
  --> $DIR/11-unsafe-function.rs:12:13
   |
12 |         pub unsafe fn noop(&self) {}
   |             ^^^^^^
